--- a/src/components/clubs/clubs.scss
+++ b/src/components/clubs/clubs.scss
@@ -1,3 +1,4 @@
+$inpcol:orange;
 * {
     margin: 0;
     padding: 0;
@@ -36,31 +37,53 @@
     color: #9CEAF3;
 }
 
-a {
+a{
     text-decoration: none;
     color: rgb(238, 238, 238);
 }
-
-body {
-    background: linear-gradient(90deg, rgba(45, 87, 154, 1) 0%, rgba(121, 58, 9, 1) 48%, rgba(0, 212, 255, 1) 100%);
-    height: 100vh;
-    font-family: 'Fira Code', monospace;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.mainApp{
+    .inpchoices{
+        ol{
+            text-align: left;
+            li{
+                padding-left: 05px;
+                letter-spacing: .2rem;
+                font-size: 1.3rem;
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                font-weight: 600;
+            }
+        }
+    }
 }
 
+.club-container-container{
+    background:url("../../../public/hoel.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .club-container {
     display: flex;
     flex-direction: column;
-    width: 1000px;
-    max-width: 800px;
+    width: 50rem;
+    max-width: 80rem;
     height: 500px;
     overflow: hidden;
     border-radius: 6px;
-    border: 1px solid rgb(26, 224, 26);
-    margin: 20px;
+    border: 2.4px solid rgb(26, 224, 26);
     cursor: text;
+    animation: borderc 4.7s linear infinite;
+}
+@keyframes borderc {
+    10%{border-color: rgb(160, 216, 71);}
+    30%{border-color: orange;}
+    50%{border-color:  rgb(244, 255, 83);}
+    70%{border-color: rgb(248, 120, 120);}
+    100%{border-color: cadetblue;}
 }
 
 .menu {
@@ -70,7 +93,7 @@ body {
     flex-direction: row;
     width: 100%;
     height: 24px;
-    background-color: #424040;
+    background-color: #424040e5;
     padding: 0 8px;
     cursor: default;
 }
@@ -98,6 +121,23 @@ body {
 div.title {
     flex: 1;
     text-align: center;
+    h1{
+
+        font-size: 1.3rem;
+        padding-top: .5rem;
+        font-family: cursive;
+        letter-spacing: .5rem;
+        color: white;
+        animation: coloring 4.7s linear infinite;
+        z-index: 2000;
+    }
+}
+@keyframes coloring {
+    30%{color: rgb(70, 70, 116);}
+    10%{color: rgb(255, 228, 177);}
+    60%{color: lemonchiffon}
+    70%{color: red;}
+    100%{color: cadetblue;}
 }
 
 .menu h1 {
@@ -132,7 +172,7 @@ div.title {
     justify-content: left;
     align-items: baseline;
     align-content: flex-start;
-    background-color: #282A35;
+    background-color: #000000e5;
     width: 100%;
     height: 1000px;
     padding: 8px;
@@ -219,4 +259,28 @@ input:focus {
 
 .icone.error {
     color: #F78F85;
+}
+.inp{
+    display: flex;
+    &::before{
+        content: '>';
+        color: $inpcol;
+        font-weight: 500;
+    }
+    input[type="text"]{
+        caret-color: $inpcol;
+        margin-left: 10px;
+      
+    }
+}
+.inputcont{
+    display: flex;
+    flex-direction: column;
+    label{
+        display: inline;
+        width: 50%;
+        font-weight: 600;
+        font-size: 1rem;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+    }
 }
